# bae

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  askama.toml  docker-compose.yml  tailwind.config.js
.sqlx/: query-01c2c0d83d64bea5363f1f4c0a685140c76c15bdde8ecb0ab08900e25a57f9a0.json  query-055881eb4aa901eea0e2752d222b85808d7a7488d7dd8e8e5eacab429adae0a7.json  query-069c05763b345f50c12c10adc431be7c7d79683d39a0e7c7057d5f382e88eb28.json  query-07fd59e17756bce40a04103a837af2e181238387028af32ac2860159ec9f6c51.json  query-09cc532af957577df3ee66a54b220b5e9180afa04f7e8ce286bb0630386a59d1.json  query-0bb7383c46d8f0b736c5cedba2ac22e339e800b6fe247c30134ee6d777012723.json  query-0da2d1743394e2a1b5391281a4432f6835d371419f4ac6a529d0ee0406a11712.json  query-0ddab9ce2bab43b4c0fe6fba290e0950fbe09b31c2ac0406788c8e03ed124bd7.json  query-28a05dfd5bd7ae837fe0bff9229b0eb85a117a43df4a06444d66d700f05092eb.json  query-29831034dc9d065b71ed93e6fa48891b20847f8226c4eb85d59f4783d08f3ee7.json  query-34575803488fa929c7296030dc6daf92675c338837eea233b77d0ffe77d98788.json  query-35782020c5f1fa26844135143e2431f73656cb3d7ef3ce7cb244d3d5d82af94e.json  query-3bc761a8f60735d8247b5ee061576c2d49c7618c8f6e63e5a57f05b424d56ace.json  query-4582c8f4b5d6bd389116fe74be20b570a923f6d23350b27e3832d5554b2f7329.json  query-55cb1785d3e1e977331f4d0e53d3ef22b7811c89f09279904271046d8ea345b2.json  query-609a70d2e1f79d4b74d8b712c728e6b70f5872c90faaefb54479005480d9c016.json  query-6f0323d2ee28f30385487b24189ceada0d54fec40a174398545e16ef4349582f.json  query-6f2b42476c1603c886747e4a6c1e0292a6445a47df73f8bd3bb341c1ac9421d7.json  query-76dfb11dbbeade56132b448bf400a0ecdd1defb3c2fb06f182f08236e0f7489f.json  query-825047676fb0c4304914486e28e3b43d1f697d6c4d4f8dbb605a2cb9a2ef0953.json  query-9b4007077db78ecafe5df08e3da6457bf7541a215b78c37668b041e1f6b60b6f.json  query-9bbfaa25a85a161e98eebeca9fe100dd7b786e14fafd66437671a2dfafb4393e.json  query-a29c96e07b21419d6131b4082f71eda5bf79cc8317b48ec2413ab2807cdf8672.json  query-b2bea1659130bcd14b3610e4500e84350d482268991ed20316e7837af7a96785.json  query-b2c62a41cadae7579c1ca500a4ca59025859d5dea14f802bb9c6b6d71e860c21.json  query-ba28a3635a69e537d7fdc1006ca86de56e4ffc374c85f4f7a85a41b7eb412f92.json  query-c6a00474680e6c22b15a0fc0998fc3f5889f38da993aa8adaff85da192bce32b.json  query-c6be0080c0e3e3a530a6d96d99e7c9105318566fda5726f96122e3727aa171d6.json  query-ca187c8a6eafaae4e8727fb7e72a47225ce16a2230cb380b3e408378e451f7ce.json  query-cdce5eeaa94fdd7cba7db2b58b798d0460ef1ae5f08608a7a972c9d73bd423fe.json  query-d909c9d0d12df57359b265b8420c833d00c11f80142d0b8aba49ccb8b8078bd1.json  query-daf8fd5a565a41345077c9736fe3faee7c42744a31fc509b694bacb9d0ff4b02.json  query-e5ac04d0458257ed536733239feae80f44572a3eba63cf13ef9a5516851b752b.json  query-e7e9d8e0861c1596d7894b4bdb7264ffa5a1e872a7da86ec6afb222f74c2bf8f.json  query-e7fef2d9ce347404de03ed0d586d8e0c99d501fb438597f98c455987e2d8ff73.json  query-fb5f9dcb2a802df24979d70fdc6817cde26b7511f3f2eb9c9c3db6c1ef93de68.json  query-fe08f489153ea47e692d9a1e7d5029a36c542eb4c295d71e74fb38b389018b5e.json  query-ffcda1c0cf6ac9b99478b23fb786273259705b7df329cc2a6d7e451d3b80b8dd.json
bae-cli/: Cargo.toml
bae-cli/src/: cli_io.rs  diff.rs  main.rs
bae-common/: Cargo.toml
bae-common/migrations/: 20240126143100_more-blog-fields.sql  20240126235404_nonnull-author.sql
bae-common/src/: blog.rs  database.rs  highlighting.rs  lib.rs  markdown_render.rs
bae-common/test_fixtures/: authors.sql  blog_posts.sql  lorem.txt  tags.sql
bae-server/: Cargo.toml  askama.toml
bae-server/src/: main.rs  model.rs
bae-server/src/server/: mod.rs  util.rs
bae-server/src/server/blog/: mod.rs  templates.rs
migrations/: 20240113115317_database.sql  20240113160909_database.sql  20240121122028_blog.sql  20240121123613_tag.sql  20240121125652_rename_tag_fk.sql  20240126105959_timestamptz.sql  20240126232943_reading_time_type.sql
src/: database.rs  highlighting.rs  main.rs  markdown_render.rs  model.rs  templates.rs
src/server/: mod.rs
src/server/blog/: mod.rs  templates.rs
static/: robots.txt
templates/: base.html  error.html
templates/blog/: home.html
test_fixtures/: authors.sql  blog_posts.sql
web_contents/: input.css
web_contents/assets/: style.css
web_contents/highlighting_themes/: light.json
web_contents/static/: highlight_style.css  style.css
web_contents/templates/: base.html  error.html  home.html  utils_macros.html
web_contents/templates/blog/: blog_base.html  blog_post.html  display_macros.html  home.html  tag.html  tagged.html  tags.html  test.html
