[package]
name = "bae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["tracing", "macros"] }
axum-extra = { version = "0.9", features = ["typed-routing"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
sqlx = { version = "0.7" , features = ["sqlite"]}
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
dotenv = "0.15"
thiserror = "1.0"
