[workspace]
members = ["bae-server", "bae-common", "bae-cli"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = { version = "0.7", features = ["tracing", "macros"] }
axum-extra = { version = "0.9", features = ["typed-routing", "typed-header", "query"] }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.12"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-highlight = "0.20"
rss = "2.0"
sqlx = { version = "0.7", features = ["postgres", "chrono", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
dotenv = "0.15"
thiserror = "1.0"
color-eyre = "0.6"
itertools = "0.12"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
similar = { version = "2.4", features = ["inline"] }
console = "0.15"

[profile.dev.package.askama_derive]
opt-level = 3
