[package]
name = "bae-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bae-common = { path = "../bae-common" }
dotenv.workspace = true
clap.workspace = true
tree-sitter.workspace = true
color-eyre.workspace = true
comrak.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing-subscriber.workspace = true
