[package]
name = "bae-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx.workspace = true
chrono.workspace = true
futures.workspace = true
thiserror.workspace = true
serde.workspace = true
pulldown-cmark.workspace = true
tracing.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-highlight.workspace = true
itertools.workspace = true
